feat: adiciona lista de tecnologias certo dessa vez

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1>Meu Projeto Web</h1>
     <p>Praticando Git e GitHub</p>
+    <ul>
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>Git e GitHub</li>
+
     </ul>
     <script src="js/script.js"></script>
 </body>
